<resources>
    <string name="app_name">HotelBook</string>

    <!-- Label for Settings activity -->
    <string name="title_home">home</string>

    <string name="title_hotels">hotels</string>

    <!-- Label for Settings activity -->
    <string name="title_abouts">About Us</string>

    <!-- Label for Settings activity -->
    <string name="title_settings">Settings</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.     Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.     Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.     Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.     Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse</string>


    <!-- Accessibility description for a control that allows the user to close the current screen
     and go back to the previous one. -->
    <string name="close_and_go_back">Close and go back</string>


    <!-- Address of Moscone Center. Shown together with its name. -->
    <string name="map_moscone_address" translatable="false">747 Howard St,\nSan Francisco,\nCA 94103</string>


    <!-- Menu item to open the Explore screen [CHAR_LIMIT=20] -->
    <string name="navdrawer_item_home">Home</string>

    <!-- Menu item to open the Explore screen [CHAR_LIMIT=20] -->
    <string name="navdrawer_item_Searches">Recent searches</string>

    <!-- Menu item to open a screen that lists I/O related hashtags. Each hashtag, when clicked, will
    open Google+ stream of posts that uses the hashtag [CHAR_LIMIT=20] -->
    <string name="navdrawer_item_Favorites">Favorites</string>


    <!-- Menu item to open the Settings screen [CHAR_LIMIT=20] -->
    <string name="navdrawer_item_settings">Settings</string>

    <!-- Menu item that brings up the application's About screen -->
    <string name="navdrawer_item_about">About Us</string>

    <!-- Shown in the 'About' window of the app. -->
    <string name="about_main"><![CDATA[
        <b>Google I/O 2015</b><br>
        Version %s
    ]]></string>

    <!-- Shown as a link in the About screen of the app; user can click to see the Terms of Services. -->
    <string name="about_terms">Terms of Service</string>

    <!-- Shown as a link in the About screen of the app; user can click to see the Privacy Policy. -->
    <string name="about_privacy_policy">Privacy Policy</string>

    <!-- Shown as a link in the About screen of the app; user can click it to see the licenses. -->
    <string name="about_licenses">Open Source Licenses</string>

    <!-- Shown as a link in the About screen of the app; user can click to see the EULA. -->
    <string name="about_eula">End User License Agreement</string>

    <!-- Accessibility description for navigation drawer -->
    <string name="navdrawer_description_a11y">Navigation Drawer used to switch between major
        features of the application</string>

    <!-- String used to wrap navigation item descriptions for a11y users to indicate the user
      interface element is a menu item. This string indicates a selected menu item -->
    <string name="navdrawer_selected_menu_item_a11y_wrapper">%1$s selected menu item</string>

    <!-- String used to wrap navigation item descriptions for a11y users to indicate the user
     interface element is a menu item. -->
    <string name="navdrawer_menu_item_a11y_wrapper">%1$s  menu item</string>

    <!-- Menu item that allows user to reload the data in the current screen so they see
    the most up-to-date version from the server. -->
    <string name="description_refresh">Refresh</string>


    <!-- Title in the Settings screen for the "Show currency " option -->
    <string name="pref_currency_title">Currency</string>

    <!-- Summary in the Settings screen for the "Show Currency  -->
    <string name="pref_currency_description">Use your Currency instead of the conference’s Currency.</string>

    <!-- Array in the Settings screen for the "Currency" option -->
    <string-array name="currency">
        <item>New Taiwan Dollar(NT$)</item>
        <item>Swiss France(fr.)</item>
    </string-array>
    <string-array name="currencyValue">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Title in the Settings screen for the "Show locale " option -->
    <string name="pref_locale_title">Locale</string>

    <!-- Summary in the Settings screen for the "Show Currency  -->
    <string name="pref_locale_description">Use your Locale instead of the conference’s Locale.</string>

    <string-array name="locale">
        <item>Trinidad &#038; Tobago</item>
        <item>Turkey</item>
    </string-array>
    <string-array name="localeValue">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Title in the Settings screen for the "Show Language " option -->
    <string name="pref_language_title">language</string>

    <string name="text_language">Language</string>
    <string name="id_language">language</string>

    <!--for Drawer -->
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>

    <string name="Drawer_Searches">Recent searches</string>
    <string name="Drawer_Favorites">Favorites</string>
    <string name="Drawer_Settings">Settings</string>
    <string name="Drawer_About_Us">About Us</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <!-- Home Search View -->
    <string name="destination">Destination</string>
    <string name="check_in_date">Check in Date</string>
    <string name="check_out_date">Check out Date</string>
    <string name="btn_search">Search</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Back</string>
    <string name="action_search">search</string>
    <string name="stay_number">Room</string>
    <string name="description_home">Home</string>

    <string-array name="personNumber">
        <item>1 guest</item>
        <item>2 guests</item>
        <item>3 guests</item>
        <item>4 guests</item>
        <item>5 guests</item>
        <item>6 guests</item>
        <item>7 guests</item>
        <item>8 guests</item>
        <item>9 guests</item>
        <item>10 guests</item>
    </string-array>

    <string-array name="roomNumber">
        <item>1 room</item>
        <item>2 rooms</item>
        <item>3 rooms</item>
        <item>4 rooms</item>
        <item>5 rooms</item>
    </string-array>

</resources>
