<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2014 Google Inc. All rights reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".social.SocialActivity">

    <!-- Main layout -->
    <br.liveo.hotelbook.hotelbook.ui.widget.DrawShadowFrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        app:shadowDrawable="@drawable/header_shadow">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/about_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/travel">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/search_view_vertical_margin"
                android:paddingLeft="@dimen/search_view_horizontal_margin"
                android:paddingRight="@dimen/search_view_horizontal_margin"
                android:paddingTop="@dimen/search_view_vertical_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:background="@drawable/corners_bg"
                    android:elevation="9dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:text="@string/destination"
                            android:id="@+id/textView4"
                            android:textColor="@color/theme_primary_dark"
                            android:layout_weight="1" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:id="@+id/destination"
                            android:layout_weight="2" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:text="@string/check_in_date"
                                android:id="@+id/textView3"
                                android:textColor="@color/theme_primary_dark"
                                android:layout_weight="1" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:text="New Text"
                                android:id="@+id/checkInDate"
                                android:layout_weight="2" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:text="@string/check_out_date"
                                android:id="@+id/textView2"
                                android:textColor="@color/theme_primary_dark"
                                android:layout_weight="1" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:text="New Text"
                                android:id="@+id/checkOutDate"
                                android:layout_weight="2" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.7">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:text="@string/stay_number"
                                android:id="@+id/textView"
                                android:textColor="@color/theme_primary_dark"
                                android:layout_weight="1" />

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="2">

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:id="@+id/imagePerson"
                                    android:layout_weight="1.2"
                                    android:src="@drawable/ic_action_light_person"/>

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:text="0"
                                    android:id="@+id/personNumber"
                                    android:gravity="center"
                                    android:layout_weight="1" />

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:id="@+id/imageRoom"
                                    android:layout_weight="1.2"
                                    android:src="@drawable/ic_action_light_home"/>

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:text="0"
                                    android:id="@+id/roomNumber"
                                    android:gravity="center"
                                    android:layout_weight="1" />
                            </LinearLayout>


                        </LinearLayout>

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_search"
                            android:id="@+id/btnSearch"
                            android:layout_weight="1"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/theme_primary_dark"
                            android:textColor="@color/body_text_1_inverse"
                            android:elevation="8dp"/>

                    </LinearLayout>

                </LinearLayout>



            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/headerbar"
            style="@style/HeaderBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical">

            <include layout="@layout/toolbar_actionbar" />
            <!-- placeholder, empty except on L -->

        </LinearLayout>


    </br.liveo.hotelbook.hotelbook.ui.widget.DrawShadowFrameLayout>

    <!-- Nav drawer -->
    <include layout="@layout/navdrawer" />

</android.support.v4.widget.DrawerLayout>